--- a/index.html
+++ b/index.html
@@ -15,12 +15,29 @@
     <p>Let's get right into it</p>
 
     <h1>Ingredients:</h1>
-    <ol>
+    <ul>
         <li>2 eggs</li>
         <li>water</li>
         <li>Pinch salt</li>
         <li>Pinch pepper</li>
         <li>Filling ingredients</li>
+    </ul>
+    <h1>Steps:</h1>
+    <ol>
+        <li> Whisk eggs, water, salt and pepper. </li>
+        <li> Spray 8-inch (20 cm) non-stick skillet with cooking spray. Heat over medium heat. Pour in egg mixture. As eggs set around edge of skillet, with spatula, gently push cooked portions toward centre of skillet. Tilt and rotate skillet to allow uncooked egg to flow into empty spaces.</li>
+        <li> When eggs are almost set on surface but still look moist, cover half of omelette with filling. Slip spatula under unfilled side; fold over onto filled half.</li>
+        <li> Cook for a minute, then slide omelette onto plate.</li>
+
+        <h2>Thanks</h2>
+        <p> Thanks for sticking with us till the end!
+            Check other recipes down below:
+        </p>
+        
+        <ul>
+            <a href="https://www.allrecipes.com/recipes/151/breakfast-and-brunch/pancakes/"> Tasty Pancakes!</a>
+            <a href="https://www.allrecipes.com/recipes/149/breakfast-and-brunch/french-toast/">French Toast!</a>
+        </ul>
     </ol>
 </body>
 </html>
